--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -30,28 +30,29 @@ body {
 
 .content {
   padding-top: 50px;
-  padding-right: 30px;
-  padding-left: 30px;
+  /*padding-right: 30px;
+  padding-left: 30px;*/
 }
 
 #right {
-  width: 20%;
-  /*float: right;*/
+  width: 22%;
+  float: right;
+  position:relative;
   margin-right: 0;
-  float:left;
+  text-align:right;
 }
 
-#center {
+.center {
   width: 60%;
-  /*float: left;*/
-  float:left;
+  position:relative;
+  float: left;
 }
 
 #left {
-  width: 20%;
-  /*float: left;*/
+  width: 18%;
   margin-left: 0;
-  float:left;
+  position:relative;
+  float: left;
 }
 
 button{
@@ -59,6 +60,22 @@ button{
   vertical-align: middle;
 }
 
+input:-moz-placeholder,
+textarea:-moz-placeholder {
+  color: #999999;
+}
+
+input:-ms-input-placeholder,
+textarea:-ms-input-placeholder {
+  color: #999999;
+}
+
+input::-webkit-input-placeholder,
+textarea::-webkit-input-placeholder {
+  color: #999999;
+}
+
+input,
 textarea{
   width: 100%;
   height: 100%;
