--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -17,6 +17,7 @@ body {
   top: 0;
   right:0;
   left:0;
+  font-size: 30px;
 
   margin-bottom: 0;
   background-color: brown;
@@ -30,31 +31,51 @@ body {
   z-index: 100;
 }
 
+.container
+{
+  box-shadow: 0 0 8px #CCC;
+}
 .content {
   padding-top: 50px;
-  /*padding-right: 30px;
-  padding-left: 30px;*/
+  position: absolute;
+  width: 80%;
+  margin-left: 10%;
+  height: auto;
 }
 
 #right {
-  width: 22%;
-  float: right;
-  position:relative;
-  margin-right: 0;
+  float: left;
+  width: 19%;
+  position: relative;
+  margin-left: 15px;
   text-align:right;
 }
 
 .center {
-  width: 60%;
   position:relative;
+  margin-left: 15px;
   float: left;
+  width: 50%;
 }
 
 #left {
-  width: 18%;
-  margin-left: 0;
-  position:relative;
   float: left;
+  width: 22%;
+  margin-left: 10px;
+  position:relative;
+}
+
+.title
+{
+  position: relative;
+  height: 50px;
+  font-size: 20px;
+  text-align: center;
+}
+
+#chat
+{
+  height: 336px;
 }
 
 button{
