--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,6 @@ html
       script(type='text/javascript', src= script)
   body
   div.header
-    span CodeShare
+    span.logo CodeShare
     block extra_header_content
   block content
