--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -35,14 +35,23 @@ body {
   left:0;
   font-size: 30px;
   margin-bottom: 0;
-  background-color: brown;
-  /*background-image: -moz-linear-gradient(top, #222, #111);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#222), to(#111));
-  background-image: -webkit-linear-gradient(top, #222, #111);
-  background-image: -o-linear-gradient(top, #222, #111);
-  background-image: linear-gradient(to bottom, #222, #111);
-  background-repeat: repeat-x;*/
+  color: #CCCCCC;
+  background-color: #BB1010;
+  background-image: linear-gradient(to bottom, #BB1010, #282828);
+  background-image: -ms-linear-gradient(top, #BB1010, #282828);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#BB1010), to(#282828));
+  background-image: -webkit-linear-gradient(top, #BB1010, #282828);
+  background-image: -o-linear-gradient(top, #BB1010, #282828);
+  background-image: -moz-linear-gradient(top, #BB1010, #282828);
+  background-repeat: repeat-x;
   z-index: 100;
+}
+
+.header > span {
+  vertical-align: middle;
+}
+.logo {
+  margin-left: 10px;
 }
 
 /* CSS for sandbox.jade */
@@ -87,7 +96,7 @@ body {
   width: 100%;
 }
 
-button{
+button, .button{
   cursor: pointer;
   vertical-align: middle;
 }
