--- a/views/index.jade
+++ b/views/index.jade
@@ -14,4 +14,9 @@ block content
           a.button(href="/sandbox") Get Started!
           p Click the button above to go to a new editor.
 
+      div#right-index
+        iframe#presentation(src='/images/codeshare-lite.svg')
+        p Want to know more about codeshare?
+          a(href='/images/codeshare-full.svg') See the full presentation.
+
 
