--- a/views/index.jade
+++ b/views/index.jade
@@ -17,6 +17,6 @@ block content
       div#right-index
         iframe#presentation(src='/images/codeshare-lite.svg')
         p Want to know more about codeshare?
-        a(href='/images/codeshare-full.svg') See the full presentation.
+        a(href='/images/codeshare-full.svg') See the full presentation (in portuguese).
 
 
