--- a/views/sandbox.jade
+++ b/views/sandbox.jade
@@ -1,10 +1,5 @@
 extends layout
 
-block extra_header_content
-  select#filetype
-    each key, val in types
-      option(value=val) #{key}
-
 block content
   div.container
     div.content
@@ -16,47 +11,19 @@ block content
         button#send Send
       div.center
         div.title Type your code here!
-        textarea#coding-area(cols='50', rows ='30')
         div.options
           button(name='execute')#exec-button Executar
           button(name='save')#save-button Save Code
+          select#filetype
+            each key, val in types
+              option(value=val) #{key}
+        div#coding-area
       div.right
         div.title Test your code here!
         h2 stdin
         textarea#input-area(cols='50', rows ='10')
         h2 stdout
         textarea#result-area(cols='50', rows ='10', readOnly=true)
-  script(type='text/javascript')
-    $(document).ready(function (){
-      $('#exec-button').click(function(event){
-        $.post(
-          '/sandbox/#{id}/run',
-          {
-            script: $('#coding-area').val(),
-            stdin: $('#input-area').val(),
-            type: $('#filetype').val(),
-            id: '#{id}'
-          },
-          function(data){
-             $('#result-area').val(data);
-          },
-          'text'
-        );
-      });
-      $('#save-button').click(function(event){
-        $.post(
-          '/sandbox/#{id}/save',
-          {
-            text: $('#coding-area').val(),
-            type: $('#filetype').val(),
-            id: '#{id}'
-          },
-          function(data){
-             $('#result-area').val(data);
-          },
-          'text'
-        );
-      });
-    });
   include includes/sandbox/chat.js.jade
-  include includes/sandbox/share.js.jade
+  include includes/sandbox/editor.js.jade
+  //- include includes/sandbox/share.js.jade
