--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -9,6 +9,7 @@ body {
   height: 100%;
   width: 1170px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  color: #CCC;
 }
 
 
@@ -16,6 +17,7 @@ body {
 {
   box-shadow: 0 0 8px #CCC;
 }
+
 
 .content {
   padding-top: 50px;
@@ -54,87 +56,49 @@ body {
   margin-left: 10px;
 }
 
-/* CSS for sandbox.jade */
+body {
+  /* background by Atle Mo and Lea Verou */
+  /* http://lea.verou.me/css3patterns/#carbon-fibre */
+  background:
+    radial-gradient(black 15%, transparent 16%) 0 0,
+    radial-gradient(black 15%, transparent 16%) 8px 8px,
+    radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
+    radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
 
-.right {
-  float: left;
-  width: 19%;
-  position: relative;
-  margin-left: 15px;
-  text-align:right;
-}
+  background:
+    -moz-radial-gradient(black 15%, transparent 16%) 0 0,
+    -moz-radial-gradient(black 15%, transparent 16%) 8px 8px,
+    -moz-radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
+    -moz-radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
 
-.center {
-  position:relative;
-  margin-left: 15px;
-  float: left;
-  width: 50%;
-}
+  background:
+    -o-radial-gradient(black 15%, transparent 16%) 0 0,
+    -o-radial-gradient(black 15%, transparent 16%) 8px 8px,
+    -o-radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
+    -o-radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
 
-.left {
-  float: left;
-  width: 22%;
-  margin-left: 10px;
-  position:relative;
-}
+  background:
+    -webkit-radial-gradient(black 15%, transparent 16%) 0 0,
+    -webkit-radial-gradient(black 15%, transparent 16%) 8px 8px,
+    -webkit-radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
+    -webkit-radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
 
+  background:
+    -ms-radial-gradient(black 15%, transparent 16%) 0 0,
+    -ms-radial-gradient(black 15%, transparent 16%) 8px 8px,
+    -ms-radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
+    -ms-radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
 
-.title
-{
-  position: relative;
-  height: 50px;
-  font-size: 20px;
-  text-align: center;
-}
-
-#chat
-{
-  height: 336px;
-}
-
-#send {
-  width: 100%;
-}
-
-button, .button{
-  cursor: pointer;
-  vertical-align: middle;
-}
-
-input:-moz-placeholder,
-textarea:-moz-placeholder {
-  color: #999999;
-}
-
-input:-ms-input-placeholder,
-textarea:-ms-input-placeholder {
-  color: #999999;
-}
-
-input::-webkit-input-placeholder,
-textarea::-webkit-input-placeholder {
-  color: #999999;
-}
-
-input,
-textarea{
-  width: 100%;
-  height: 100%;
-}
-
-a {
-  color: #00B7FF;
+  background-color:#282828;
+  background-size:16px 16px;
 }
 
 
-.nav-header {
-  margin-left: 0;
-  list-style: none;
+
+a:visited {
+  color: #D00;
 }
 
-#coding-area {
-  height: 575%;
-  width: 100%;
-  font-size: 15px;
+a:link {
+  color: #CCC;
 }
-
