--- a/views/login.jade
+++ b/views/login.jade
@@ -4,25 +4,20 @@ block login
 
 block content
     #login-container
-        form( method="post" )#login-form.well.span4
+        form( method="post", action="/login" )#login-form
             h1 Hello!
             p.subheading Please Login To Your Account
             label
                 | Username
-            input(type="text", name="user", id='user-tf').span4.required
+            input(type="text", name="user", id='user-tf')
             label
                 | Password
-            input(type="password", name="pass", id='pass-tf').span4.required
-            button(type="submit")#btn-login.btn.btn-primary
-                i.icon-lock.icon-white
+            input(type="password", name="pass", id='pass-tf')
+            button(type="submit")#btn-login.button
                 | Sign in
             label#remember-me.checkbox Remember Me
                 input(type="checkbox", checked='checked')
-            div.clear-fix
             hr
             div.btm-links
-                a(href='#')#forgot-password Forgot Your Password? 
+                a(href='#')#forgot-password Forgot Your Password?
                 a(href='/signup')#create-account Create An Account
-
-include modals/alert
-include modals/lost-password
