--- a/views/sandbox.jade
+++ b/views/sandbox.jade
@@ -4,7 +4,7 @@ block extra_css
   link(rel='stylesheet', href='/stylesheets/sandbox.css')
 
 block extra_header_content
-  span#last-save
+  span#last-save.header-contents
 
 
 block content
