--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -5,10 +5,6 @@ html {
   font-size: 100%;
 }
 
-body {
-}
-
-
 .container
 {
   box-shadow: 0 0 8px #CCC;
@@ -47,6 +43,14 @@ body {
 
 .header > span {
   vertical-align: middle;
+}
+
+.header-contents{
+  float:right;
+  font-size: 16pt;
+  font-weight: bold;
+  margin: 10px 5px 10px 5px;
+
 }
 .logo {
   margin-left: 10px;
