--- a/views/includes/sandbox/chat.js.jade
+++ b/views/includes/sandbox/chat.js.jade
@@ -20,10 +20,15 @@ script(type='text/javascript')
       }
       $('#chat').val(text+data.message);
     });
+    var logged = "#{user}";
     $('#send').click(function(){
+      var user = $('#name').val();
+      if(logged === ""){
+         user = user + ' (not logged in)';
+      }
       chat.emit('message',{
         id: '#{id}',
-        user: $('#name').val(),
+        user: user,
         content: $('#message').val()
       });
     });
