--- a/views/sandbox.jade
+++ b/views/sandbox.jade
@@ -12,7 +12,10 @@ block content
     div.content
       div.left
         div.title Talk to your codefriends here!
-        input#name(type='text', maxlength='20', placeholder='Put your name here')
+        if(user)
+          input#name(type='text', maxlength='20', placeholder='Put your name here', readonly='readonly', value="#{user.user}")
+        else
+          input#name(type='text', maxlength='20', placeholder='Put your name here')
         textarea#chat(cols='50', rows ='30', readonly='readonly')
         textarea#message(cols='30', rows='2', readonly='yes', placeholder='Choose a name above so you can chat')
         button#send Send
@@ -24,7 +27,8 @@ block content
             each key, val in types
               option(value=val) #{key}
           button(name='execute')#exec-button Run Code
-          button(name='save')#save-button Save Code
+          if(user)
+            button(name='save')#save-button Save Code
         div#coding-area
       div.right
         div.title Test your code here!
